Eliminando los .pt del commit
